--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,30 +1,28 @@
 [package]
-name = "TechnoBike-UI"
-version = "0.0.0"
+name = "app"
+version = "0.1.0"
 description = "A Tauri App"
 authors = ["you"]
 license = ""
 repository = ""
+default-run = "app"
 edition = "2021"
-rust-version = "1.57"
+rust-version = "1.60"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [build-dependencies]
-tauri-build = { version = "1.1", features = [] }
+tauri-build = { version = "1.4.0", features = [] }
 
 [dependencies]
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-tauri = { version = "1.1", features = ["api-all"] }
-#techno_bike = { git = "https://github.com/tobias1012/TechnoBike.git"}
+tauri = { version = "1.4.0", features = [] }
 techno_bike = { path = "../../TechnoBike"}
 evmap = "10.0.0"
 
 [features]
-# by default Tauri runs in production mode
-# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
-# this feature is used used for production builds where `devPath` points to the filesystem
-# DO NOT remove this
+# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
+# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
+# DO NOT REMOVE!!
 custom-protocol = [ "tauri/custom-protocol" ]
