--- a/package.json
+++ b/package.json
@@ -29,5 +29,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@skeletonlabs/skeleton": "^1.9.0",
+		"svelte-add": "^2023.6.28-0.0",
+		"tailwindcss": "^3.3.3"
+	}
 }
