--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
 		"@tauri-apps/cli": "^1.4.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
+		"postcss": "^8.4.24",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
@@ -32,6 +35,7 @@
 	"type": "module",
 	"dependencies": {
 		"@skeletonlabs/skeleton": "^1.9.0",
+		"@tauri-apps/api": "^1.4.0",
 		"svelte-add": "^2023.6.28-0.0",
 		"tailwindcss": "^3.3.3"
 	}
